crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__invalid_leading_zero_small.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: "lex_invalid(source, Mode::Module)"
---
## Tokens
```
[
    Unknown 0..3,
    Newline 3..3,
]
```
## Errors
```
[
    LexicalError {
        error: OtherError(
            "invalid decimal integer literal",
        ),
        location: 0..3,
    },
]
```
