crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_newline_format_spec.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: "lex_invalid(source, Mode::Module)"
---
## Tokens
```
[
    NonLogicalNewline 0..1,
    TStringStart 1..3 (flags = T_STRING),
    TStringMiddle 3..5 (flags = T_STRING),
    Lbrace 5..6,
    NonLogicalNewline 6..7,
    Identifier 11..12,
    Colon 12..13,
    TStringMiddle 13..14 (flags = T_STRING),
    Newline 14..15,
    Rbrace 15..16,
    Identifier 16..18,
    String 18..19 (flags = UNCLOSED_STRING),
    Newline 19..20,
    TStringStart 20..22 (flags = T_STRING),
    TStringMiddle 22..24 (flags = T_STRING),
    Lbrace 24..25,
    NonLogicalNewline 25..26,
    Identifier 30..31,
    Colon 31..32,
    TStringMiddle 32..33 (flags = T_STRING),
    Newline 33..34,
    Indent 34..42,
    Identifier 42..43,
    Newline 43..44,
    Dedent 44..44,
    Rbrace 44..45,
    Identifier 45..47,
    String 47..48 (flags = UNCLOSED_STRING),
    Newline 48..49,
]
```
## Errors
```
[
    LexicalError {
        error: TStringError(
            NewlineInFormatSpec,
        ),
        location: 13..14,
    },
    LexicalError {
        error: UnclosedStringError {
            triple_quoted: false,
            escaped_end_quote: false,
            detected_line: 4,
        },
        location: 18..18,
    },
    LexicalError {
        error: TStringError(
            NewlineInFormatSpec,
        ),
        location: 32..33,
    },
    LexicalError {
        error: UnclosedStringError {
            triple_quoted: false,
            escaped_end_quote: false,
            detected_line: 8,
        },
        location: 47..47,
    },
]
```
